.kubernetes/manifiestos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-${APP}
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: ${APP}
  ports:
    - name: ${APP}
      protocol: TCP
      port: 8080
      targetPort: 8080
